smol adjustments + add publishing workflow

--- a/examples/tot_dfs/tot_dfs.ipynb
+++ b/examples/tot_dfs/tot_dfs.ipynb
@@ -32,11 +32,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "outputs": [],
    "source": [
     "from langchain_openai import ChatOpenAI\n",
-    "from planning_library.strategies import TreeOfThoughtsDFSStrategy\n",
+    "from planning_library.strategies.tot_dfs import TreeOfThoughtsDFSStrategy\n",
     "from environments.game_of_24.environment import GameOf24Env\n",
     "import os\n",
     "from planning_library.strategies.tot_dfs.components import ThoughtEvaluator, ThoughtGenerator\n",
@@ -50,11 +48,13 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-26T09:49:23.689914Z",
-     "start_time": "2024-04-26T09:49:22.579083Z"
+     "end_time": "2024-06-25T16:21:28.585745Z",
+     "start_time": "2024-06-25T16:21:27.963550Z"
     }
    },
-   "id": "c94d0bfae6ac52b7"
+   "id": "c94d0bfae6ac52b7",
+   "outputs": [],
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
@@ -68,21 +68,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "outputs": [],
    "source": [
     "os.environ[\"LANGCHAIN_TRACING_V2\"] = \"true\"\n",
-    "os.environ[\"LANGCHAIN_PROJECT\"] = \"ToT (new) + Game of 24 test\"\n",
+    "os.environ[\"LANGCHAIN_PROJECT\"] = \"ToT + Game of 24 test\"\n",
     "os.environ[\"LANGCHAIN_ENDPOINT\"] = \"https://api.smith.langchain.com\""
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-26T09:49:23.701234Z",
-     "start_time": "2024-04-26T09:49:23.690887Z"
+     "end_time": "2024-06-25T16:21:31.554328Z",
+     "start_time": "2024-06-25T16:21:31.231083Z"
     }
    },
-   "id": "7d8838345955d3c2"
+   "id": "7d8838345955d3c2",
+   "outputs": [],
+   "execution_count": 2
   },
   {
    "cell_type": "markdown",
@@ -96,7 +96,6 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
    "source": [
     "env = GameOf24Env()\n",
     "meta_tools = MetaTools(reset=GymEnvResetTool(env=env))\n",
@@ -105,11 +104,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-26T09:49:23.769688Z",
-     "start_time": "2024-04-26T09:49:23.758190Z"
+     "end_time": "2024-06-25T16:21:31.892673Z",
+     "start_time": "2024-06-25T16:21:31.879495Z"
     }
    },
    "id": "d3c7e376d173b5b6",
+   "outputs": [],
    "execution_count": 3
   },
   {
@@ -134,8 +134,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "outputs": [],
    "source": [
     "# ToT hyperparameters\n",
     "max_num_thoughts = 3  # number of thoughts to generate at each iteration\n",
@@ -149,11 +147,13 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-26T09:49:25.077166Z",
-     "start_time": "2024-04-26T09:49:25.064470Z"
+     "end_time": "2024-06-25T16:21:32.752689Z",
+     "start_time": "2024-06-25T16:21:32.740580Z"
     }
    },
-   "id": "3b1ff5faf3a98a79"
+   "id": "3b1ff5faf3a98a79",
+   "outputs": [],
+   "execution_count": 4
   },
   {
    "cell_type": "markdown",
@@ -186,7 +186,6 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
    "source": [
     "thought_evaluator = ThoughtEvaluator.create(llm=ChatOpenAI(model=model_name, temperature=temperature), \n",
     "                                      user_message=dedent(\"\"\"\n",
@@ -205,11 +204,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-26T09:49:26.634978Z",
-     "start_time": "2024-04-26T09:49:26.603725Z"
+     "end_time": "2024-06-25T16:21:33.855357Z",
+     "start_time": "2024-06-25T16:21:33.834449Z"
     }
    },
    "id": "388cbde0cb39f2b0",
+   "outputs": [],
    "execution_count": 5
   },
   {
@@ -243,7 +243,6 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
    "source": [
     "thought_generator = ThoughtGenerator.create(llm=ChatOpenAI(model=model_name, temperature=temperature),\n",
     "                                            tools=env.tools, \n",
@@ -262,11 +261,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-26T09:49:27.777100Z",
-     "start_time": "2024-04-26T09:49:27.684343Z"
+     "end_time": "2024-06-25T16:21:35.076451Z",
+     "start_time": "2024-06-25T16:21:35.056221Z"
     }
    },
    "id": "d48ca4a0c5d0fe71",
+   "outputs": [],
    "execution_count": 6
   },
   {
@@ -281,32 +281,53 @@
   },
   {
    "cell_type": "code",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "<planning_library.strategies.tot_dfs.components.thought_generator.ThoughtGenerator at 0x1357d05d0>"
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "thought_generator"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-17T17:01:50.726701Z",
-     "start_time": "2024-04-17T17:01:50.713306Z"
+     "end_time": "2024-06-25T16:21:36.132361Z",
+     "start_time": "2024-06-25T16:21:36.121884Z"
     }
    },
    "id": "22eed8130208d0ad",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<planning_library.strategies.tot_dfs.components.thought_generator.ThoughtGenerator at 0x31ad831d0>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "execution_count": 7
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "source": [
+    "strategy_executor = TreeOfThoughtsDFSStrategy(\n",
+    "    action_executor=action_executor,\n",
+    "    max_iterations=max_num_steps,\n",
+    "    return_intermediate_steps=True,\n",
+    "    thought_generator=thought_generator,\n",
+    "    thought_evaluator=thought_evaluator,\n",
+    "    do_sorting=False,\n",
+    ")\n",
+    "env.reset(options={\"numbers\": [1, 1, 4, 6]})\n",
+    "strategy_executor.invoke({\"numbers\": \"1 1 4 6\"})"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-06-25T16:24:33.434577Z",
+     "start_time": "2024-06-25T16:21:36.559170Z"
+    }
+   },
+   "id": "3511e290e2ab0d52",
    "outputs": [
     {
      "name": "stdout",
@@ -324,34 +345,23 @@
      "traceback": [
       "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
       "\u001B[0;31mIndexError\u001B[0m                                Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[7], line 10\u001B[0m\n\u001B[1;32m      1\u001B[0m strategy_executor \u001B[38;5;241m=\u001B[39m TreeOfThoughtsDFSStrategy(\n\u001B[1;32m      2\u001B[0m     action_executor\u001B[38;5;241m=\u001B[39maction_executor,\n\u001B[1;32m      3\u001B[0m     max_iterations\u001B[38;5;241m=\u001B[39mmax_num_steps,\n\u001B[0;32m   (...)\u001B[0m\n\u001B[1;32m      7\u001B[0m     do_sorting\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mFalse\u001B[39;00m,\n\u001B[1;32m      8\u001B[0m )\n\u001B[1;32m      9\u001B[0m env\u001B[38;5;241m.\u001B[39mreset(options\u001B[38;5;241m=\u001B[39m{\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mnumbers\u001B[39m\u001B[38;5;124m\"\u001B[39m: [\u001B[38;5;241m1\u001B[39m, \u001B[38;5;241m1\u001B[39m, \u001B[38;5;241m4\u001B[39m, \u001B[38;5;241m6\u001B[39m]})\n\u001B[0;32m---> 10\u001B[0m \u001B[43mstrategy_executor\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43minvoke\u001B[49m\u001B[43m(\u001B[49m\u001B[43m{\u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43mnumbers\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m:\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43m1 1 4 6\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m}\u001B[49m\u001B[43m)\u001B[49m\n",
+      "Cell \u001B[0;32mIn[8], line 10\u001B[0m\n\u001B[1;32m      1\u001B[0m strategy_executor \u001B[38;5;241m=\u001B[39m TreeOfThoughtsDFSStrategy(\n\u001B[1;32m      2\u001B[0m     action_executor\u001B[38;5;241m=\u001B[39maction_executor,\n\u001B[1;32m      3\u001B[0m     max_iterations\u001B[38;5;241m=\u001B[39mmax_num_steps,\n\u001B[0;32m   (...)\u001B[0m\n\u001B[1;32m      7\u001B[0m     do_sorting\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mFalse\u001B[39;00m,\n\u001B[1;32m      8\u001B[0m )\n\u001B[1;32m      9\u001B[0m env\u001B[38;5;241m.\u001B[39mreset(options\u001B[38;5;241m=\u001B[39m{\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mnumbers\u001B[39m\u001B[38;5;124m\"\u001B[39m: [\u001B[38;5;241m1\u001B[39m, \u001B[38;5;241m1\u001B[39m, \u001B[38;5;241m4\u001B[39m, \u001B[38;5;241m6\u001B[39m]})\n\u001B[0;32m---> 10\u001B[0m \u001B[43mstrategy_executor\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43minvoke\u001B[49m\u001B[43m(\u001B[49m\u001B[43m{\u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43mnumbers\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m:\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43m1 1 4 6\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m}\u001B[49m\u001B[43m)\u001B[49m\n",
       "File \u001B[0;32m~/Library/Caches/pypoetry/virtualenvs/planning-library-q8r1q5f_-py3.11/lib/python3.11/site-packages/langchain/chains/base.py:163\u001B[0m, in \u001B[0;36mChain.invoke\u001B[0;34m(self, input, config, **kwargs)\u001B[0m\n\u001B[1;32m    161\u001B[0m \u001B[38;5;28;01mexcept\u001B[39;00m \u001B[38;5;167;01mBaseException\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m e:\n\u001B[1;32m    162\u001B[0m     run_manager\u001B[38;5;241m.\u001B[39mon_chain_error(e)\n\u001B[0;32m--> 163\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m e\n\u001B[1;32m    164\u001B[0m run_manager\u001B[38;5;241m.\u001B[39mon_chain_end(outputs)\n\u001B[1;32m    166\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m include_run_info:\n",
       "File \u001B[0;32m~/Library/Caches/pypoetry/virtualenvs/planning-library-q8r1q5f_-py3.11/lib/python3.11/site-packages/langchain/chains/base.py:153\u001B[0m, in \u001B[0;36mChain.invoke\u001B[0;34m(self, input, config, **kwargs)\u001B[0m\n\u001B[1;32m    150\u001B[0m \u001B[38;5;28;01mtry\u001B[39;00m:\n\u001B[1;32m    151\u001B[0m     \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_validate_inputs(inputs)\n\u001B[1;32m    152\u001B[0m     outputs \u001B[38;5;241m=\u001B[39m (\n\u001B[0;32m--> 153\u001B[0m         \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43m_call\u001B[49m\u001B[43m(\u001B[49m\u001B[43minputs\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mrun_manager\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mrun_manager\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m    154\u001B[0m         \u001B[38;5;28;01mif\u001B[39;00m new_arg_supported\n\u001B[1;32m    155\u001B[0m         \u001B[38;5;28;01melse\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_call(inputs)\n\u001B[1;32m    156\u001B[0m     )\n\u001B[1;32m    158\u001B[0m     final_outputs: Dict[\u001B[38;5;28mstr\u001B[39m, Any] \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mprep_outputs(\n\u001B[1;32m    159\u001B[0m         inputs, outputs, return_only_outputs\n\u001B[1;32m    160\u001B[0m     )\n\u001B[1;32m    161\u001B[0m \u001B[38;5;28;01mexcept\u001B[39;00m \u001B[38;5;167;01mBaseException\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m e:\n",
-      "File \u001B[0;32m~/PycharmProjects/planning-library/planning_library/strategies/base_strategy.py:113\u001B[0m, in \u001B[0;36mBaseCustomStrategy._call\u001B[0;34m(self, inputs, run_manager)\u001B[0m\n\u001B[1;32m    103\u001B[0m \u001B[38;5;250m\u001B[39m\u001B[38;5;124;03m\"\"\"Run text through and get agent response.\"\"\"\u001B[39;00m\n\u001B[1;32m    105\u001B[0m outputs \u001B[38;5;241m=\u001B[39m [\n\u001B[1;32m    106\u001B[0m     \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_return(output, intermediate_steps, run_manager\u001B[38;5;241m=\u001B[39mrun_manager)\n\u001B[1;32m    107\u001B[0m     \u001B[38;5;28;01mfor\u001B[39;00m output, intermediate_steps \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_run_strategy(\n\u001B[0;32m   (...)\u001B[0m\n\u001B[1;32m    110\u001B[0m     )\n\u001B[1;32m    111\u001B[0m ]\n\u001B[0;32m--> 113\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m {key: [output[key] \u001B[38;5;28;01mfor\u001B[39;00m output \u001B[38;5;129;01min\u001B[39;00m outputs] \u001B[38;5;28;01mfor\u001B[39;00m key \u001B[38;5;129;01min\u001B[39;00m \u001B[43moutputs\u001B[49m\u001B[43m[\u001B[49m\u001B[38;5;241;43m0\u001B[39;49m\u001B[43m]\u001B[49m}\n",
+      "File \u001B[0;32m~/PycharmProjects/planning-library/planning_library/strategies/base_strategy.py:101\u001B[0m, in \u001B[0;36mBaseCustomStrategy._call\u001B[0;34m(self, inputs, run_manager)\u001B[0m\n\u001B[1;32m     91\u001B[0m \u001B[38;5;250m\u001B[39m\u001B[38;5;124;03m\"\"\"Run text through and get agent response.\"\"\"\u001B[39;00m\n\u001B[1;32m     93\u001B[0m outputs \u001B[38;5;241m=\u001B[39m [\n\u001B[1;32m     94\u001B[0m     \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_return(output, intermediate_steps, run_manager\u001B[38;5;241m=\u001B[39mrun_manager)\n\u001B[1;32m     95\u001B[0m     \u001B[38;5;28;01mfor\u001B[39;00m output, intermediate_steps \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_run_strategy(\n\u001B[0;32m   (...)\u001B[0m\n\u001B[1;32m     98\u001B[0m     )\n\u001B[1;32m     99\u001B[0m ]\n\u001B[0;32m--> 101\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m {key: [output[key] \u001B[38;5;28;01mfor\u001B[39;00m output \u001B[38;5;129;01min\u001B[39;00m outputs] \u001B[38;5;28;01mfor\u001B[39;00m key \u001B[38;5;129;01min\u001B[39;00m \u001B[43moutputs\u001B[49m\u001B[43m[\u001B[49m\u001B[38;5;241;43m0\u001B[39;49m\u001B[43m]\u001B[49m}\n",
       "\u001B[0;31mIndexError\u001B[0m: list index out of range"
      ]
     }
    ],
-   "source": [
-    "strategy_executor = TreeOfThoughtsDFSStrategy(\n",
-    "    action_executor=action_executor,\n",
-    "    max_iterations=max_num_steps,\n",
-    "    return_intermediate_steps=True,\n",
-    "    thought_generator=thought_generator,\n",
-    "    thought_evaluator=thought_evaluator,\n",
-    "    do_sorting=False,\n",
-    ")\n",
-    "env.reset(options={\"numbers\": [1, 1, 4, 6]})\n",
-    "strategy_executor.invoke({\"numbers\": \"1 1 4 6\"})"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-04-26T09:49:55.725835Z",
-     "start_time": "2024-04-26T09:49:37.221299Z"
-    }
-   },
-   "id": "3511e290e2ab0d52"
+   "execution_count": 8
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "27447afc72352bc7"
   }
  ],
  "metadata": {
